project 2 push button to turn on led complete.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ target_link_directories(${CMAKE_PROJECT_NAME} PRIVATE
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     # Add user sources here
     ${CMAKE_SOURCE_DIR}/Core/Projects/project_led_toggle.c
+    ${CMAKE_SOURCE_DIR}/Core/Projects/project_button_led.c
 )
 
 # Add include paths
